--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
-
+### Android ###
 # Built application files
 *.apk
 *.ap_
@@ -17,11 +12,12 @@
 # Generated files
 bin/
 gen/
+.idea/
+*.iml
 
 # Gradle files
 .gradle/
 build/
-/*/build/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -32,3 +28,8 @@ proguard/
 # Log Files
 *.log
 
+# Android Studio Navigation editor temp files
+.navigation/
+
+### Android Patch ###
+gen-external-apklibs
