--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,35 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.multimedia.eformatic">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".EFormatic"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"></application>
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".activities.LoginActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.CategoriesActivity"
+            android:label="@string/title_activity_course"></activity>
+        <activity
+            android:name=".activities.TrainingsActivity"
+            android:label="@string/title_activity_trainings"></activity>
+        <activity
+            android:name=".activities.TrainingActivity"
+            android:label="@string/title_activity_training"></activity>
+        <activity
+            android:name=".activities.VideoActivity"
+            android:label="@string/title_activity_video"></activity>
+    </application>
 
 </manifest>
