--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,9 +19,14 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.mcxiaoke.volley:library:1.0.18'
     compile 'com.android.support:recyclerview-v7:21.0.+'
+    compile 'com.facebook.android:facebook-android-sdk:4.4.0'
 }
